--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -12,7 +12,7 @@
    width: 40%;
 }
 
-.Home-subtitle{
+.Home-subtitle {
    margin: auto;
    margin-top: 3vh;
    padding: 10px 0 10px 0;
@@ -22,6 +22,12 @@
    background-color: rgba(0, 0, 0, 0.8);
    text-align: center;
    width: 50%;
+}
+
+.Home-audio {
+   position: absolute;
+   top: 20px;
+   left: 20px;
 }
 
 .beer {
@@ -38,4 +44,16 @@
    right: 5%;
    bottom: -20%;
    transform: rotateZ(-30deg) 
+}
+
+.pikachu {
+   position: absolute;
+   z-index: 55;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   align-content: center;
+   width: 100vw;
+   height: 100vh;
+   pointer-events: none;
 }
