--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,17 +1,104 @@
 .App {
   text-align: center;
+  font-family: 'Press Start 2P', cursive;
+}
+
+
+input:focus {
+  outline: none;
 }
 
 .nav-header {
 
 }
 
+
 .nav-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   position: absolute;
+  font-family: 'Press Start 2P', cursive;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0) 100% );
+  transition: all 0.3s ease;
+  color: white;
   top: 0;
   left: 0;
   right: 0;
   height: 10vh;
   z-index: 2;
-  background-color: white;
+}
+
+.nav-container:hover {
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) 90%, rgba(0, 0, 0, 0) 100% );
+}
+
+.nav-button {
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.nav-button:hover {
+  /* transform: scale(1.1); */
+  background: linear-gradient(to bottom, rgba(254, 202, 48, 1), rgba(254, 202, 48, 1) 10%, transparent 10%, transparent 100% );
+}
+
+.flex-row-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.flex-row-start {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  align-content: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex: 1;
+  margin-top: 50px;
+}
+
+.form-input-container {
+  width: 100%;
+  height: 100%;
+}
+
+.form-input-container input {
+  height: 30px;
+  font-size: 15px;
+  width: 100%;
+}
+
+tr {
+  margin-bottom: 20px;
+}
+
+td.min {
+  width: 1%;
+  white-space: nowrap;
+  text-align: start;
 }
