--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -76,15 +76,14 @@ input:focus {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  align-content: flex-start;
-  flex: 1;
-  margin-top: 50px;
+  align-content: center;
+  align-items: center;
+  flex-grow: 1;
+  width: 100%;
 }
 
 .form-input-container {
   width: 100%;
-  height: 100%;
 }
 
 .form-input-container input {
@@ -101,4 +100,8 @@ td.min {
   width: 1%;
   white-space: nowrap;
   text-align: start;
+}
+
+button:focus {
+  outline: none;
 }
