--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -87,6 +87,14 @@
    user-select: none;
 }
 
+.pokeball {
+   height: 100%;
+   object-fit: contain;
+   display: inline-block;
+   vertical-align: middle;
+   margin-right: 15px;
+}
+
 img {
    user-select: none;
 }
