--- a/src/pages/SignupPage/SignupPage.module.css
+++ b/src/pages/SignupPage/SignupPage.module.css
@@ -43,6 +43,8 @@
    transition: transform 0.3s ease;
    transform: translateY(-100vh);
    z-index: 2;
+   display: flex;
+   flex-direction: column;
 }
 
 .modalCardContainer.modalOpen {
@@ -52,7 +54,62 @@
 
 .modalCardContainer h1 {
    font-size: 30px;
+   margin: 0;
+}
+
+.modalCardContainer .submit {
+   font-family: 'Press Start 2P', cursive;
+   margin: 10px 0 0 0;
+   padding: 10px;
+   border: none;
+   background: none;
+   height: 50px;
+   display: block;
+   background-color: rgb(47, 118, 184);
+   border-radius: 10px;
+}
+
+.modalCardContainer .submit:hover {
+   cursor: pointer;
 }
 
 
 
+.modalCardContainer .submit > span {
+   vertical-align: middle;
+}
+
+
+
+/* Pokeball shake */
+.modalCardContainer .submit:hover > img {
+   animation-name: ballshake;
+   animation-duration: 1000ms; /* or: Xms */
+   animation-iteration-count: infinite;
+   animation-direction: normal; /* or: normal */
+   animation-timing-function: linear; /* or: ease, ease-in, ease-in-out, linear, cubic-bezier(x1, y1, x2, y2) */
+   animation-fill-mode: forwards; /* or: backwards, both, none */
+   animation-delay: 0; /* or: Xms */
+}
+
+@keyframes ballshake {
+   0%, 100% {
+      transform: rotateZ(0);
+   }
+   5% {
+      transform: rotateZ(-15deg);
+   }
+   15% {
+      transform: rotateZ(15deg);
+   }
+   25% {
+      transform: rotateZ(-15deg);
+   }
+   35% {
+      transform: rotateZ(15deg);
+   }
+   40% {
+      transform: rotateZ(0deg);
+   }
+
+}
