--- a/src/pages/SigninPage/SigninPage.module.css
+++ b/src/pages/SigninPage/SigninPage.module.css
@@ -67,10 +67,11 @@
    display: block;
    background-color: rgb(59, 96, 167);
    border-radius: 10px;
+   opacity: 0.7;
 }
 
 .modalCardContainer .submit:hover {
-   cursor: pointer;
+   cursor: not-allowed;
 }
 
 
@@ -79,10 +80,17 @@
    vertical-align: middle;
 }
 
+.submit.submitEnabled {
+   opacity: 1;
+}
+
+.submit.submitEnabled:hover {
+   cursor: pointer;
+}
 
 
 /* Pokeball shake */
-.modalCardContainer .submit:hover > img {
+.modalCardContainer .submitEnabled:hover > img {
    animation-name: ballshake;
    animation-duration: 1000ms; /* or: Xms */
    animation-iteration-count: infinite;
