--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -9,41 +9,6 @@
 }
 
 
-.nav-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: absolute;
-  font-family: 'Press Start 2P', cursive;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0) 100% );
-  transition: all 0.3s ease;
-  color: white;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 10vh;
-  z-index: 2;
-}
-
-.nav-container:hover {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) 90%, rgba(0, 0, 0, 0) 100% );
-}
-
-.nav-button {
-  cursor: pointer;
-  transition: transform 0.3s ease;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-}
-
-.nav-button:hover {
-  /* transform: scale(1.1); */
-  background: linear-gradient(to bottom, rgba(254, 202, 48, 1), rgba(254, 202, 48, 1) 10%, transparent 10%, transparent 100% );
-}
-
 .flex-row-center {
   display: flex;
   flex-direction: row;
@@ -71,9 +36,10 @@
 .form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-content: center;
   align-items: center;
+  margin-top: 10px;
   flex-grow: 1;
   width: 100%;
 }
