--- a/src/pages/SigninPage/SigninPage.module.css
+++ b/src/pages/SigninPage/SigninPage.module.css
@@ -39,7 +39,7 @@
    border-radius: 10%;
    padding: 5% 5% 5% 5%;
    width: 60vw;
-   height: 50vh;
+   min-height: 50vh;
    transition: transform 0.3s ease;
    transform: translateY(-100vh);
    z-index: 2;
@@ -57,9 +57,17 @@
    margin: 0;
 }
 
+
+.modalCardContainer .error {
+   color: red;
+   font-size: 15px;
+   font-family: Arial, Helvetica, sans-serif;
+   margin: 0;
+}
+
 .modalCardContainer .submit {
    font-family: 'Press Start 2P', cursive;
-   margin: 10px 0 0 0;
+   margin: 0 0 0 0;
    padding: 10px;
    border: none;
    background: none;
@@ -82,10 +90,15 @@
 
 .submit.submitEnabled {
    opacity: 1;
+   transition: transform 0.3s ease;
 }
 
 .submit.submitEnabled:hover {
    cursor: pointer;
+}
+
+.submit.submitEnabled:hover:active {
+   transform: scale(0.9);
 }
 
 
