--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -18,15 +18,22 @@
    background: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.8) 90%, rgba(0, 0, 0, 0) 100% );
  }
  
- .nav-button {
-   cursor: pointer;
-   transition: transform 0.3s ease;
-   height: 100%;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   align-content: center;
+.nav-button {
+  cursor: pointer;
+  transition: transform 0.3s ease;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  color: white;
+  text-decoration: none;
  }
+
+ .nav-button.selected {
+   color: rgb(254, 202, 48);
+ }
+
  
  .nav-button:hover {
    /* transform: scale(1.1); */
