--- a/src/pages/GamePage/GamePage.css
+++ b/src/pages/GamePage/GamePage.css
@@ -1,13 +1,63 @@
+.GamePage {
+   display: flex;
+   height: 100vh;
+   width: 100%;
+   justify-content: flex-end;
+   align-items: center;
+
+}
+
+.GamePageBackground {
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   right: 0;
+   left: 0;
+   background-image: url('../../assets/images/pokemonCity.png');
+   background-size: cover;
+   background-repeat: no-repeat;
+   filter: grayscale(1);
+   z-index: -1;
+}
+
+.GamePage-aside {
+   display: flex;
+   justify-content: center;
+   align-content: flex-start;
+   position: fixed;
+   top: 15vh;
+   left: 30px;
+}
+
 .PlayerCardContainer {
    display: flex;
    width: 200px;
    flex-direction: column;
-   justify-content: center;
+   justify-content: flex-start;
    align-content: center;
    align-items: center;
-   position: fixed;
-   top: 15vh;
-   left: 30px;
+   z-index: 2;
+   color: rgb(254, 202, 48);
+}
+
+.MoveCardContainer {
+   display: flex;
+   width: 200px;
+   flex-direction: column;
+   justify-content: flex-start;
+   align-content: center;
+   align-items: center;
+   z-index: 2;
+   /* color: rgb(254, 202, 48); */
+}
+
+.button.move-button {
+   margin-top: 15px;
+   border: 3px solid rgb(254, 202, 48);
+}
+
+.move-button:hover {
+   cursor: pointer;
 }
 
 .addForm {
